--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+html {
+    height: 100%;
+    width: 100%;
+    body {background-color: #969094;}
+   }
+
+   body{
+    border:solid;
+    border-radius: 10px;
+    border-color:deeppink;
+    border-width:10px;
+  } 
 
