last minute additions and deletions to index.html, style.css and readme files

--- a/style.css
+++ b/style.css
@@ -12,32 +12,22 @@ html {
   } 
 
 .container {
-    max-width: 400px;
-    margin: 0 auto;
+    max-width: 500px;
+    margin: auto;
     text-align: center;
     padding: 20px;
     background-color:  rgba(112, 86, 243, 0.5);; 
     border-radius: 10px;
     box-shadow: 0 0 100px rgba(163, 1, 196, 0.3); 
-    margin-top: 115px; 
-    margin-bottom: 115px; 
+    margin-top: 45px; 
+    margin-bottom: 45px; 
   }
  
-  .container {
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px;
-    background-color:  rgba(112, 86, 243, 0.5); 
-    border-radius: 10px;
-    box-shadow: 0 0 100px rgba(163, 1, 196, 0.3); 
-    margin-top: 115px; 
-    margin-bottom: 115px; 
-  } 
-
+  
   h1 { 
     font-family: cursive;
     font-size: 75px;
+    color: purple;
     margin: auto;
     max-width: 100%;
     margin-bottom: 35px;
@@ -61,14 +51,14 @@ html {
   
   #temperature{
     color: blue;
-    font-size: 25px;
+    font-size: 45px;
     font-family: cursive;
     margin-bottom: 35px;
     margin-top: 35px;
   }
   
   #description{
-    font-size: 25px;
+    font-size: 45px;
     font-family: cursive;
     margin-bottom: 35px;
     margin-top: 35px;
@@ -77,11 +67,13 @@ html {
   #speed{
     color: gold;
     margin-bottom: 35px;
-    margin-top: 35px; 
+    margin-top: 35px;
+    font-size: 45px; 
   }
   
   #gust{
     font-weight: bold;
+    font-size: 45px;
     color: black;
     margin-bottom: 35px;
     margin-top: 35px;
@@ -103,6 +95,7 @@ button {
   color: #2d0ceb;
   padding: 10px 20px;
   border-radius: 5px;
+  font-weight: bold;
 }
 
 #searchButton{
@@ -110,11 +103,12 @@ button {
   margin: 3px;
   border-radius: 5px;
   max-width: 100%;
+  font: center;
 }
 
 .weather-info {
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 55px;
   
 }
 
@@ -122,6 +116,7 @@ footer{
   font-weight: bold;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
+  margin-top: 50px;
 }
 
 
